# src/model/object.rs
@@ -5,6 +5,8 @@ use utoipa::{IntoParams, ToSchema};
 
 use crate::repository::object::ObjectRow;
 
+use super::util::Pagination;
+
 #[derive(Deserialize, IntoParams)]
 pub struct ObjectsQuery {
   pub path: Option<String>,
@@ -18,8 +20,7 @@ pub struct ObjectQuery {
 #[derive(Deserialize, ToSchema)]
 pub struct CreateObjectRequest {
   pub path: String,
-  #[serde(rename = "type")]
-  pub kind: Option<String>,
+  pub r#type: Option<String>,
 }
 
 #[derive(ToSchema)]
@@ -32,16 +33,14 @@ pub struct UploadPartRequest {
 #[derive(Deserialize, ToSchema)]
 pub struct MoveObjectRequest {
   pub path: String,
-  #[serde(rename = "type")]
-  pub kind: Option<String>,
+  pub r#type: Option<String>,
 }
 
 #[derive(Serialize, ToSchema)]
 pub struct ObjectInstance {
   pub id: i64,
   pub path: String,
-  #[serde(rename = "type")]
-  pub kind: Option<String>,
+  pub r#type: Option<String>,
   pub size: u64,
   pub updated_at: DateTime<Utc>,
   pub created_at: DateTime<Utc>,
@@ -52,10 +51,12 @@ impl From<ObjectRow> for ObjectInstance {
     Self {
       id: row.id,
       path: row.path,
-      kind: row.kind,
+      r#type: row.r#type,
       size: row.size as u64,
       updated_at: DateTime::<Utc>::from_timestamp(row.updated_at, 0).unwrap_or_default(),
       created_at: DateTime::<Utc>::from_timestamp(row.created_at, 0).unwrap_or_default(),
     }
   }
 }
+
+pub type ObjectInstancePagination = Pagination<ObjectInstance>;
